--- a/css/style.css
+++ b/css/style.css
@@ -199,8 +199,8 @@ header#hero {
 header#hero .banner-text .title{
  margin-top: 140px;;
 }
-header#hero h1 {
-    font-size: 4rem;
+header#hero h1,h3 {
+    font-size: 3rem;
     color: #133E87;
     font-weight: bold;
     text-shadow: 1px -1px 0 white, 2px -1px 0 white, 1px 1px 0 white, 1px 1px 0 white;
@@ -211,7 +211,7 @@ header#hero p{
     font-weight: 400;
     color: #fff;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #32BEA4, -1px 1px 0 #000, 1px 1px 0 #000;
-    line-height:5rem ;
+    line-height:3rem ;
 }
 
 
