--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@ section .title h3::before {
 
 
 header#hero {
-    background-image: url("../images/banner-bg.png");
+    background-image: url(../images/img-6.png"");
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
