--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body{
         font-family: "Poppins", sans-serif;
         font-weight: 100;
         font-style: normal;
+        padding: 0;
 }
 section{
     padding-top: 100px;
@@ -32,7 +33,7 @@ section .title h3::before {
     content: "";
     width: 8px;
     height: 8px;
-    background-color: black;
+    background-color:#133E87;
     border-radius: 50%;
     position: absolute;
     bottom: 10px;
@@ -52,7 +53,7 @@ section .title h3::before {
     content: "";
     width: 5px;
     height: 5px;
-    background-color: black;
+    background-color: #133E87;
     border-radius: 50%;
     position: absolute;
     bottom: 10px;
@@ -197,7 +198,7 @@ header#hero {
 
 }
 header#hero .banner-text .title{
- margin-top: 140px;;
+ margin-top: 100px;;
 }
 header#hero h1,h3 {
     font-size: 3rem;
@@ -227,6 +228,7 @@ section#about img {
 }
 
 section#about .bg {
+
     background-image: url("../images/dots.png");
     position: absolute;
     background-repeat: repeat;
@@ -239,7 +241,7 @@ section#about h3{
     font-size:  3rem;
 }
 section#about p.sub-title {
-font-size: 2.5rem;
+font-size: 20px;
     text-transform: uppercase;
     letter-spacing: 2px;
     margin-bottom: 20px;
@@ -250,6 +252,10 @@ section#about p {
     line-height: 1.6;
     font-size: 20px;
     color: rgb(116, 129, 130);
+}
+section#about .point p{
+    line-height: 1.6;
+    color: #000;
 }
 section#about .btn a {
     padding: 10px 30px;
@@ -351,20 +357,23 @@ section#contact .icon {
 }
 
 section#contact .icon:hover {
-    background-color: #1c1c1c;
+    background-color: #133E87;
     color: #f4f4f4;
 }
-
+section#contact .icon svg{
+    color: #133E87;
+}
 section#contact h6 {
     font-weight: 700;
     margin-bottom: 10px;
 }
 
 section#contact p {
+    font-weight: 300;
     line-height: 1.6;
     margin: 0;
-    font-size: 13px;
-    color: #748182;
+    font-size: 20px;
+    color: #000;
     margin-bottom: 50px;
 }
 
